Update logo && fix sidebar z-index

--- a/_sass/_wrapper.scss
+++ b/_sass/_wrapper.scss
@@ -5,6 +5,7 @@
   display: flex;
 
   > .wrapper {
+    z-index: 1;
     position: relative;
     width: 100%;
     height: 100%;
